# django_weber

./: .env  .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
DjangoWeber/: asgi.py  settings.py  urls.py  wsgi.py
business/: admin.py  models.py  urls.py  views.py
business/migrations/: 0001_initial.py  0002_remove_busine_created_at_remove_busine_deleted_at_and_more.py
business/seed/: business.json
database/structure/: MER.mwb  MER.mwb.bak  Script.sql
departaments/: models.py
departaments/migrations/: 0001_initial.py  0002_remove_department_created_at_and_more.py
departaments/seed/: departaments.json
departments/: apps.py  models.py
departments/seed/: departaments.json  departments.json
subsidiary/: admin.py  models.py
subsidiary/migrations/: 0001_initial.py  0002_initial.py  0003_rename_direction_subsidiary_address.py  0004_alter_subsidiary_administrator.py  0005_remove_subsidiary_created_at_and_more.py
subsidiary/seed/: subsidiary.json
templates/: _base.html
towns/: admin.py  models.py
towns/migrations/: 0001_initial.py  0002_remove_town_created_at_remove_town_deleted_at_and_more.py
towns/seed/: towns.json
user_profile/: models.py  views.py
user_profile/migrations/: 0001_initial.py  0002_alter_userprofile_role.py  0002_alter_userprofile_table.py  0003_userprofile_deleted_userprofile_deleted_by_cascade.py
user_profile/seed/: auth_user.json  user_profile.json
users/: models.py
users/migrations/: 0001_initial.py
utils/management/commands/: export_all.py  exportall.py  load_all.py  loadall.py
